@@ -29,6 +29,7 @@
         <setting label="30718" id="remote-port" type="number" default="8080"/>
         <setting label="30719" id="remote-username" type="text" default="kodi"/>
         <setting label="30720" id="remote-password" type="text" option="hidden" default=""/>
+        <setting label="30723" id="resolve-locally" type="bool" default="true"/>
         <setting label="30721" type="lsep"/>
         <setting label="30722" type="lsep"/>
     </category>
