@@ -1,4 +1,5 @@
 3.1.1
+- add Setting to 'Remote/Send' - 'Resolve/scrape locally'
 - minor progress dialog fixes
 - minor string updates
 
